--- a/web/add-elements.html
+++ b/web/add-elements.html
@@ -2,27 +2,27 @@
 
 <html>
 
-  <head>
+<head>
     <meta charset="utf-16">
     <title>A Minimalist App</title>
     <script defer src="add-elements.dart.js"></script>
     <link rel="stylesheet" href="add-elements.css">
-  </head>
+</head>
 
-  <body>
-    <h2>Procrastinator's Todo</h2>
+<body>
+    <h2>待办事项</h2>
 
     <div>
-      <input id="to-do-input" type="text" placeholder="What needs to be done?">
+        <input id="to-do-input" type="text" placeholder="要做啥？">
     </div>
 
     <div>
-      <ul id="to-do-list">
-      </ul>
+        <ul id="to-do-list">
+        </ul>
     </div>
 
-    <p><a href="/">Home</a></p>
-    
-  </body>
+    <p><a href="/">主页</a></p>
+
+</body>
 
 </html>
