--- a/web/remove-elements.html
+++ b/web/remove-elements.html
@@ -2,30 +2,30 @@
 
 <html>
 
-    <head>
-        <meta charset="utf-16">
-        <title>A Minimalist App</title>
-        <script defer src="remove-elements.dart.js"></script>
-        <link rel="stylesheet" href="remove-elements.css">
-    </head>
+<head>
+    <meta charset="utf-16">
+    <title>A Minimalist App</title>
+    <script defer src="remove-elements.dart.js"></script>
+    <link rel="stylesheet" href="remove-elements.css">
+</head>
 
-    <body>
-        <h2>Todo</h2>
+<body>
+    <h2>待办</h2>
 
-        <div>
-            <input id="to-do-input" type="text" placeholder="What needs to be done?">
-        </div>
+    <div>
+        <input id="to-do-input" type="text" placeholder="要做啥？">
+    </div>
 
-        <div>
-            <ul id="to-do-list">
-            </ul>
-        </div>
+    <div>
+        <ul id="to-do-list">
+        </ul>
+    </div>
 
-        <button id="delete-all" type="button" style="float:right">Delete All</button>
+    <button id="delete-all" type="button" style="float:right">Delete All</button>
 
 
 
-        <p><a href="/">Home</a></p>
-    </body>
+    <p><a href="/">主页</a></p>
+</body>
 
 </html>
